Fixing the spacing around the filter bars

--- a/theme/assets/styles/components/_filter-bar.scss
+++ b/theme/assets/styles/components/_filter-bar.scss
@@ -1,5 +1,5 @@
 .filter-bar {
-  margin-bottom: 1.8rem;
+  padding-bottom: 3rem;
 
   &__header {
     margin-top: 1.5rem;
